# uwuFileShare

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
src/bindings/: bindings.cpp
src/cli/: main.py
src/core/: network.cpp  network.h
tests/test_binding/: CMakeLists.txt  hello.cpp  test_hello.py
